feat: upgrade Java 21 → 25, migrate ThreadLocal to ScopedValue (#13)
Replace WorkflowContext's ThreadLocal with Java 25 ScopedValue (JEP 506)
for structural scoping that eliminates context leaks, provides zero-copy
reads, and aligns with virtual thread best practices.

- Bump Java toolchain from 21 to 25 (LTS)
- WorkflowContext: ThreadLocal → ScopedValue, remove bind()/clear()
- Add WorkflowMDC utility for centralized MDC key management
- WorkflowExecutor: wrap execution in ScopedValue.where().run()
- DefaultWorkflowOperations: parallel branches use ScopedValue scoping
- SagaManager: compensation branches use ScopedValue scoping
- ActivityInvocationHandler: remove redundant base MDC keys
- ActivityStubBeanPostProcessor: reject final @ActivityStub fields (JEP 500 prep)
- Update all tests for ScopedValue API

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>